css/styles.css
* {
  margin: 0;
  padding: 0;
}

/* Header */
.header {
  height: 180px;
}

.nav-bar .nav-element {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

a {
  text-decoration: none;
  color: #172b4d;
}

.desktop-link {
  display: none;
}

.dropdown-menu {
  display: flex;
  flex-direction: column;
  width: 100vh;
  height: 100vh;
  position: fixed;
  bottom: 0;
  top: 0;
  padding-bottom: 40px;
}

.ax {
  font-family: 'Inter', sans-serif;
  padding-top: 20px;
  padding-left: 10px;
  padding-right: 10px;
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 20px;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
}

.xmark {
  margin-left: 340px;
  margin-top: 20px;
}

.hide {
  display: none;
}

.popup {
  position: fixed;
  top: 0;
  width: 100vw;
  height: 100vh;
  background-color: white;
  border: 20px solid #c1c7d0;
}

.xsign {
  position: absolute;
  top: 0;
  margin-left: 298px;
  padding-top: 50px;
  color: #fff;
  z-index: 1;
}

.pop-img {
  width: 370px;
  position: relative;
  height: 320px;
  padding-right: 35px;
}

.phead {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  width: 260px;
  margin-left: 10px;
}

.ptext {
  margin-left: 10px;
  margin-right: 10px;
}

.plist {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  list-style: none;
  padding-left: 0;
}

.panc {
  padding: 8px 12px;
  background: #ebf0ee;
  color: #3a4a42;
  text-align: center;
  text-decoration: none;
  border-radius: 10px;
  margin-right: 10px;
}

.pbuttons {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  list-style: none;
  gap: 47px;
}

.see {
  margin-top: 20px;
  padding-right: 10px;
  color: white;
  width: 151px;
  height: 48px;
  border-radius: 5px;
  border: none;
  background-color: #36b37f;
}

.pophide {
  display: none;
}

.nav-link {
  list-style: none;
  padding: 20px;
}

.nav-link .logo {
  line-height: 28px;
  font-size: 20px;
  font-weight: 600;
  color: #28352f;
  text-decoration: none;
}

/* Introduction CSS */
.introduction {
  background-image: url(../images/header.svg);
  background-repeat: no-repeat;
  margin-top: -60px;
  display: flex;
  flex-direction: column;
}

.introduction-title {
  width: 330px;
  height: 192px;
  font-size: 40px;
  line-height: 52px;
  font-weight: 700;
  color: #172b4d;
  text-align: center;
  padding-bottom: 58px;
  font-family: 'Inter', sans-serif;
}

.title-green {
  color: #36b37f;
  text-align: center;
}

.social-icons {
  background-image: url(../images/footer.svg);
  background-repeat: no-repeat;
  display: flex;
  flex-direction: row;
  padding-top: 64.28px;
  align-self: center;
}

.social-icons .icon {
  padding: 10px;
  list-style: none;
}

.body {
  font-family: 'Inter', sans-serif;
  text-align: center;
  font-size: 20px;
  font-weight: 400;
  line-height: 28px;
  color: #172b4d;
  padding-left: 24px;
  padding-right: 24px;
}

.working {
  font-family: 'Inter', sans-serif;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
  max-width: 9ch;
  word-wrap: break-word;
  margin-inline: auto;
}

.works-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card {
  width: 369px;
  border: solid;
  border-color: #d0d9d4;
  border-radius: 15px;
}

.card-a1 {
  margin-right: 10px;
}

.card-a2 {
  margin-right: 10px;
}

.card-a3 {
  margin-right: 10px;
}

.card-image {
  background-color: #d0d9d4;
  height: 270px;
  margin-bottom: 15px;
  background-size: cover;
  border-radius: 15px 15px 0 0;
}

.card-text {
  font-family: 'Inter', sans-serif;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 32px;
  text-align: center;
  color: #3a4a42;
  padding-left: 0;
}

.card-bottom {
  background-color: white;
}

.alist {
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style: none;
  padding-left: 0;
}

.card2 {
  background-color: #d0d9d4;
  border-radius: 10px;
}

.anc {
  padding: 8px 12px;
  background: #ebf0ee;
  color: #3a4a42;
  text-align: center;
  text-decoration: none;
  border-radius: 10px;
}

.see-button {
  display: flex;
  align-items: center;
  background-color: #36b37e;
  margin-left: 124px;
  margin-bottom: 30px;
}

.intro {
  width: 330px;
  font-size: 40px;
  line-height: 52px;
  font-weight: 700;
  color: #172b4d;
  text-align: center;
  font-family: 'Inter', sans-serif;
}

.about-text {
  font-family: 'Inter', sans-serif;
  text-align: center;
  font-size: 20px;
  font-weight: 400;
  line-height: 28px;
  color: #172b4d;
  padding-left: 24px;
  padding-right: 24px;
}

.t-x {
  display: none;
}

.resume-button {
  background-color: #36b37e;
  margin-left: 50px;
  margin-bottom: 30px;
}

.card-text2 {
  font-family: 'Inter', sans-serif;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 32px;
  text-align: center;
  color: #3a4a42;
}

.anc2 {
  display: flex;
  align-items: center;
  padding: 8px 8px;
  background: white;
  color: #36b37e;
  text-align: center;
  text-decoration: none;
  border-radius: 10px;
}

.sphere {
  background-color: #d0d9d4;
}

.sp-image {
  margin-left: 20px;
  margin-top: 40px;
}

.diamond {
  background-color: #d0d9d4;
}

.dm-image {
  margin-left: 120px;
  margin-top: 56px;
}

.light {
  background-color: #d0d9d4;
}

.lt-image {
  margin-left: 120px;
  margin-top: 56px;
}

.contact-info {
  width: 330px;
  font-size: 40px;
  line-height: 52px;
  font-weight: 700;
  color: #172b4d;
  text-align: center;
  padding-bottom: 10px;
  font-family: 'Inter', sans-serif;
  margin-top: 30px;
  margin-bottom: 20px;
}

.text-center {
  text-align: center;
  background-image: url(../images/about.svg);
  background-repeat: no-repeat;
}

.grid-section {
  display: grid;
  grid-template-columns: 365px;
}

.contact-container {
  display: flex;
  flex-direction: column;
}

.contact-forms {
  display: flex;
  align-items: center;
}

.inputs {
  list-style: none;
  margin-left: 0;
}

.label {
  display: block;
}

#name {
  width: 100%;
  height: 48px;
  border: solid;
  border-color: #d0d9d4;
  border-radius: 4px;
}

#msg {
  width: 100%;
  height: 114px;
  margin-top: 20px;
  border: solid;
  border-color: #d0d9d4;
  border-radius: 4px;
}

#e-mail {
  border: solid;
  border-color: #d0d9d4;
  border-radius: 4px;
  margin-top: 20px;
  height: 48px;
  width: 100%;
}

.in {
  width: 350px;
  margin-left: 0;
  padding-left: 0;
}

.in::placeholder {
  padding-top: 15px;
  padding-left: 16px;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
}

.in::-ms-value {
  padding-top: 15px;
  padding-left: 16px;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
}

.sign {
  display: flex;
  align-self: center;
  color: #d0d9d4;
  font-family: 'Inter', sans-serif;
}

/* Desktop CSS */
@media screen and (min-width: 768px) {
  .mobile-link {
    display: none;
  }

  .desktop-link {
    display: flex;
  }

  .pophide {
    display: none;
  }

  .pophide-two {
    display: none;
  }

  .popup-window {
    width: 1440px;
    height: 700px;
    position: fixed;
    top: 0;
    bottom: 0;
    background-color: rgb(193, 199, 208, 0.8);
  }

  .popup {
    position: absolute;
    width: 920px;
    height: 650px;
    border: none;
    z-index: 1;
    margin-left: 15rem;
    margin-top: 2rem;
  }

  .phead {
    width: 900px;
    margin-left: 10px;
    display: flex;
    flex-direction: column;
  }

  .xsign {
    position: relative;
    top: 0;
    margin-left: 0;
    padding-top: 0;
    color: #67798e;
    width: 35px;
    height: 35px;
    background-color: #ebecf0;
    align-self: flex-end;
    margin-right: 3rem;
    padding-left: 7px;
    margin-top: 10px;
  }

  .pop-img {
    width: 900px;
    height: 400px;
    padding-right: 35px;
    content: url(../images/desktop.png);
  }

  .phead-h2 {
    width: 589px;
    margin-left: 10px;
  }

  .pbuttons {
    position: absolute;
    margin-top: -11rem;
    margin-left: 34rem;
  }

  .nav-bar .nav-element {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .title-green {
    padding: 0;
    margin: 0;
    height: auto;
  }

  .introduction-title {
    width: 920px;
    padding: 0;
    margin: 0;
    height: auto;
  }

  .introduction {
    width: 100%;
    height: 120vh;
    background: none;
    align-items: center;
    justify-content: center;
  }

  .first {
    background-image: url(../images/new.png);
    background-size: cover;
    background-repeat: no-repeat;
    margin-bottom: 150px;
  }

  .work-cards {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
    margin-top: 30px;
    margin-left: 80px;
    margin-right: 80px;
  }

  .card {
    width: 200;
    margin: 0;
    background-color: #d0d9d4;
  }

  .contact-info {
    text-align: left;
    width: 463px;
  }

  .form button {
    margin-left: 0;
  }

  .alist {
    max-width: 364px;
    margin-left: 10px;
    margin-right: 10px;
    flex-wrap: wrap;
  }

  .anc2 {
    margin-right: 5px;
    border-radius: 10px;
    margin-top: 5px;
  }

  .body {
    margin-top: 25px;
    margin-left: 125px;
    width: 920px;
  }

  .working {
    max-width: 40ch;
  }

  .about-me {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    background-repeat: no-repeat;
    background-image: url(../images/about.svg);
    background-position: 0 200px;
  }

  .t-x {
    display: flex;
    padding-top: 100px;
    padding-left: 10px;
    width: 420px;
    height: 600px;
    margin-left: 180px;
    background-image: url(../images/group4.png);
    background-position: left;
  }

  .t-x img {
    width: 200px;
    height: 200px;
  }

  .t-w {
    margin-left: 300px;
  }

  .text-center {
    background-image: none;
  }

  .about-me-text {
    width: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 192px;
  }

  .social-icons {
    margin-top: 0;
    background: none;
    padding-top: 0;
    padding-bottom: 50px;
  }

  #name {
    width: 600px;
  }

  .contact-me {
    background-image: url(../images/group.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 1px 100px;
    height: 500px;
    margin-left: 0;
    display: flex;
    flex-direction: row;
    margin-top: 162px;
  }

  .contact-container {
    padding-left: 0;
  }

  body {
    padding-left: 0;
  }

  .contact-message {
    margin-left: 120px;
  }

  .end {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: 150px;
  }
}

